[package]
name = "fltk-check-env"
version = "0.1.3"
edition = "2018"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
description = "Check if your env can build fltk-rs"
repository = "https://github.com/fltk-rs/fltk-check-env"
documentation = "https://docs.rs/fltk-check-env"
keywords = ["gui", "widgets", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"

[dependencies]
termcolor = "1.1"
lazy_static = "1"
rayon = "1"